--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,10 @@
 name: ci-node-workflow
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - develop
 jobs:
-  build:
+  run-ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
