--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,12 +2,14 @@ sonar.projectKey=alcir-junior-caju_study-full-cycle-3-0-continuous-integration-c
 sonar.organization=alcir-junior-caju
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=study-full-cycle-3-0-continuous-integration-challenge
-#sonar.projectVersion=1.0
+sonar.projectName=study-full-cycle-3-0-continuous-integration-challenge
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=src
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+sonar.javascritpt.coverage.plugin=lcov
+sonar.javascritpt.lcov.reportPaths=coverage/lcov.info
